<resources>
    <string name="app_name">My CoffePlace Application</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for others fragments -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="contact">contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="menuprincipal">
        <item>hamburgesa</item>
        <item>patatas</item>
        <item>cafe</item>
        <item>bocadillo</item>
    </string-array>
    <string-array name="menuprincipal1">
        <item>hamburgesa</item>
        <item>patatas</item>
        <item>bocadillo</item>
    </string-array>
</resources>